# hecon-watch

./: .gitignore  .vercelignore  CLAUDE.md  Makefile  README.md  atc_combined.csv  build_site_data.py  download_log.txt  download_missing_psds.py  download_msac_outcomes.py  download_nice_missing.py  download_pbs_schedule.py  download_pbs_stats.py  download_pbs_usage.py  embed_psds.py  extract_psd_text.py  fetch_pbs_drug_spend.py  generate_psd_data.py  index.html  inspect_pbs_xls.py  main.py  match_pbac_nice.py  nice_metadata.csv  nice_pbac_unmatched.csv  parse_atc_data.py  parse_pbac_calendar.py  pbac_nice_matched.csv  pbac_nice_unmatched.csv  pbs_drug_spend.csv  psd_dashboard.html  psd_extracted.csv  pyproject.toml  read_pbs_xls.py  refresh.py  requirements.txt  robots.txt  site_data.js  site_preview.html  sitemap.xml  vercel.json  (+2 more)
api/: _query_parser.py  _synthesis.py  requirements.txt  search.py
data/: agenda_sources.json  atc_benefit.csv  atc_services.csv  brand_to_generic.json  outcomes_sources.json  pbac_agendas.json  pbac_calendar.json  pbac_outcomes.json  pbs_drug_spend.csv  pbs_schedule_atc.csv  psd_embeddings_meta.json  psd_extracted.csv  psd_map.json  psd_nearest.json
drug/21-valent-pneumococcal-conjugate-vaccine/: index.html
drug/abacavir-sulfate-with-lamivudine/: index.html
drug/abaloparatide/: index.html
drug/abatacept/: index.html
drug/abemaciclib/: index.html
drug/abiraterone-acetate-and-methylprednisolone/: index.html
drug/abiraterone-acetate-and-prednisolone/: index.html
script_report/: __init__.py  __main__.py  config.py  refresh.py
(+1076 files in other folders)
